# TIK_TOK

./: README.md  pyproject.toml  requirements.txt
Credentials/: data_recaptcha.py
Data/: data_recaptcha.py
Lib/: recaptcha.py
Test/: test_recaptcha.py  test_recaptcha2.py
