[tool.poetry]
name = "my-python-project"  # Replace with your desired project name
version = "0.1.0"
description = "Description of your project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.4"  # Updated numpy version to meet opencv-python requirements
opencv-python = "^4.8.1.78"  # Updated opencv-python version
# Other dependencies...

# List your dependencies with their versions
allure-pytest = "2.13.2"
allure-python-commons = "2.13.2"
asgiref = "3.7.2"
attrs = "23.1.0"
autopep8 = "2.0.4"
black = "23.9.1"
captcha2 = "0.0.1"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.0"
click = "8.1.7"
colorama = "0.4.6"
Django = "4.2.5"
exceptiongroup = "1.1.3"
flake8 = "<4.0"
greenlet = "2.0.2"
h11 = "0.14.0"
idna = "3.4"
image = "1.5.33"
iniconfig = "2.0.0"
isort = "5.12.0"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
outcome = "1.2.0"
packaging = "23.2"
pathspec = "0.11.2"
pep8 = "1.7.1"
Pillow = "10.0.1"
pip = "23.2.1"
platformdirs = "3.10.0"
playwright = "1.38.0"
pluggy = "1.3.0"
pycodestyle = "2.11.0"
pycparser = "2.21"
pyee = "9.0.4"
pyflakes = "3.1.0"
PySocks = "1.7.1"
pytesseract = "0.3.10"
pytest = "7.4.2"
pytest-base-url = "2.0.0"
pytest-playwright = "0.4.2"
python-slugify = "8.0.1"
recaptcha = "1.0rc1"
requests = "2.31.0"
selenium = "4.13.0"
setuptools = "63.2.0"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
SpeechRecognition = "3.10.0"
sqlparse = "0.4.4"
text-unidecode = "1.3"
tomli = "2.0.1"
trio = "0.22.2"
trio-websocket = "0.11.1"
typing_extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "2.0.5"
wsproto = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
